fixed layout breaks of the flex component to work with the current layout design

--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -37,3 +37,6 @@ body, html {
   background: hsl(0, 0%, 100%);
 }
 
+.container.grid-list-xl .layout .flex {
+  max-width: 224px !important;
+}
